<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_phone"
    android:fitsSystemWindows="true"
    tools:context=".View.Main.MainActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginEnd="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_may"
            android:textColor="@color/color_navigationIconHover"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:text="@string/txt_title_logueo"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/title_correo"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxStrokeColor="@color/color_inputValue"
        app:boxStrokeWidth="1sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="45dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/title_clave"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxStrokeColor="@color/color_inputValue"
        app:boxStrokeWidth="1sp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/color_inputValue"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="45dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:hint="@string/title_confirmar_lave"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxStrokeColor="@color/color_inputValue"
        app:boxStrokeWidth="1sp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/color_inputValue"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="45dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtRestablecer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_olvido"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#35373B"
        app:layout_constraintTop_toBottomOf="@id/inputConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/btn_Ingreso"
        android:textColor="@color/white"
        android:backgroundTint="#212521"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtRestablecer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginGoogle"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/btn_google"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:cornerRadius="100dp"
        app:icon="@drawable/icon_google"
        app:iconTint="@null"
        app:iconSize="26dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtOp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "
            android:textSize="14sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/txtCion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register Now"
            android:textSize="14sp"
            android:textColor="#1A4D1C"
            android:textStyle="bold"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
